# magic-mirror

./: .gitignore  Cargo.toml  build.rs
src/: contours.rs  faces.rs  holistic_detector.rs  main.rs  render.rs  segmentation.rs  texture.rs  uniforms.rs  util.rs  video_capture.rs  webcam.rs
src/shaders/: default.frag
