[package]
name = "magic-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.8"
nannou = { version = "0.18", features = ["spirv"] }
opencv = { version = "0.63", features = ["clang-runtime"] }
regex = "1"
ringbuf = "0.2"
shaderc = "0.7"
# ux-mediapipe = "0.1.0"
ux-mediapipe = { git = "https://github.com/julesyoungberg/ux-mediapipe", rev = "3aff0ea5fa068e94e4352f64178da6bcd5d49cf6" }
