[package]
name = "magic-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "1.8"
nannou = { version = "0.18", features = ["spirv"] }
opencv = "0.66"
regex = "1"
ringbuf = "0.2"
shaderc = "0.7"
# ux-mediapipe = "0.1.0"
mediapipe = { git = "https://github.com/julesyoungberg/mediapipe-rs", rev = "839094943a06209c3fcd45b36d9b82bb7f4747de" }
